Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,22 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-9d9bf85cd2a8>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-6-52837bf55ffa>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-9d9bf85cd2a8>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    list[range(0:-1)]\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-52837bf55ffa>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    list[range(0:index(cities))]\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "city_indices = len(cities)\n",
     "range(0,len(cities))\n",
-    "list[range(0:inde)]\n",
+    "list[range(0:index(cities))]\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
   },
