--- a/index.ipynb
+++ b/index.ipynb
@@ -157,15 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-52837bf55ffa>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-7-091a6906630b>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-52837bf55ffa>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    list[range(0:index(cities))]\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-091a6906630b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    list[type(0:index(cities))]\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
